--- a/angular.json
+++ b/angular.json
@@ -23,27 +23,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "src/assets/css/style.css",
-              "src/assets/vendor/aos/aos.css",
-              "src/assets/vendor/bootstrap/css/bootstrap.min.css",
-              "src/assets/vendor/bootstrap-icons/bootstrap-icons.css",
-              "src/assets/vendor/boxicons/css/boxicons.min.css",
-              "src/assets/vendor/glightbox/css/glightbox.min.css",
-              "src/assets/vendor/swiper/swiper-bundle.min.css"
-            ],
-            "scripts": [
-              "src/assets/vendor/purecounter/purecounter.js",
-              "src/assets/vendor/aos/aos.js",
-              "src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js",
-              "src/assets/vendor/glightbox/js/glightbox.min.js",
-              "src/assets/vendor/isotope-layout/isotope.pkgd.min.js",
-              "src/assets/vendor/swiper/swiper-bundle.min.js",
-              "src/assets/vendor/typed.js/typed.min.js",
-              "src/assets/vendor/waypoints/noframework.waypoints.js",
-              "src/assets/vendor/php-email-form/validate.js",
-              "src/assets/js/main.js"
-            ]
+            "styles": [],
+            "scripts": ["src/assets/js/main.js"]
           },
           "configurations": {
             "production": {
