--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [],
-            "scripts": ["src/assets/js/main.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -86,7 +86,7 @@
             "karmaConfig": "karma.conf.js",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.css"],
-            "scripts": ["src/assets/js/main.js"]
+            "scripts": []
           }
         }
       }
